--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,94 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.3.1/dist/tf.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8/dist/teachablemachine-image.min.js"></script>
+    <script type="text/javascript">
+      const URL = "https://teachablemachine.withgoogle.com/models/YBt5dtB0K/";
+      let model, webcam, labelContainer, maxPredictions;
+      var count0 = count1 = count2 =0;
+  
+      async function init() {
+          const modelURL = URL + "model.json";
+          const metadataURL = URL + "metadata.json";
+          model = await tmImage.load(modelURL, metadataURL);
+          maxPredictions = model.getTotalClasses();
+  
+          // Convenience function to setup a webcam
+          const flip = true; // whether to flip the webcam
+          webcam = new tmImage.Webcam(200, 200, flip); // width, height, flip
+          await webcam.setup(); // request access to the webcam
+          await webcam.play();
+          
+          window.requestAnimationFrame(loop);
+  
+          // append elements to the DOM
+          document.getElementById("webcam-container").appendChild(webcam.canvas);
+          labelContainer = document.getElementById("label-container");
+          labelContainer.appendChild(document.createElement("div"));
+          warningContainer = document.getElementById('warning');
+          warningContainer.appendChild(document.createElement("div"));
+      }
+  
+      async function loop() {
+          webcam.update(); // update the webcam frame
+          await predict();
+          if ((count0 < 10) && (count1 < 10)){
+            window.requestAnimationFrame(loop);
+          }
+          else if (count0 >= 10){
+              console.log("Silakan masuk, anda pakai masker");
+              var suara = document.getElementById("scanqr");
+              suara.play();
+              document.getElementById('qr-code').style.display="block";
+              await webcam.stop();
+          }
+          else if (count1 >= 10 ){
+              console.log("Anda tidak pakai masker!");
+              var suara = document.getElementById("nomask");
+              suara.play();
+              await webcam.stop();
+              setTimeout(function(){window.location.href= "https://chekin-app.web.app";},8000);
+              
+          }
+          //window.requestAnimationFrame(loop);
+      }
+  
+      // run the webcam image through the image model
+      async function predict() {
+        // predict can take in an image, video or canvas html element
+        const prediction = await model.predict(webcam.canvas);
+        if (prediction[0].probability.toFixed(2)>0.55){
+            labelContainer.childNodes[0].innerHTML = "YES";
+            warningContainer.childNodes[0].innerHTML = "";
+            count0++;
+            if ((count2 || count1) > 0) {
+                count2 = count1 = 0;
+            }
+        }
+        else if(prediction[1].probability.toFixed(2)>0.60){
+            labelContainer.childNodes[0].innerHTML = "NO";
+            warningContainer.childNodes[0].innerHTML = "";
+            count1++;
+            if ((count0 || count2) > 0) {
+                count0 = count2 = 0;
+            }
+        }
+        else if(prediction[2].probability.toFixed(2) > 0.80){
+            labelContainer.childNodes[0].innerHTML = "NO";
+            warningContainer.childNodes[0].innerHTML = "Sesuaikan wajah anda di kamera";
+            if ((count0 || count1) > 0 ){
+                count0 = count1 = 0;
+            }
+        }
+
+    }
+  
+      // window.addEventListener('load', (event) => {
+      //         init();
+      // });
+  </script>
+  
     <meta
       name="description"
       content="Web site created using create-react-app"
@@ -24,9 +112,15 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Check In App - Primakara</title>
+    <title>Check In App - LLDIKTI VIII</title>
   </head>
   <body>
+    <audio id="scanqr" >
+      <source src="sound/scanQRCode.mp3" type="audio/mpeg">
+    </audio>
+    <audio id="nomask" >
+      <source src="sound/tidakMemakaiMasker.mp3" type="audio/mpeg">
+    </audio>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
