--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,7 @@
               var suara = document.getElementById("nomask");
               suara.play();
               await webcam.stop();
-              setTimeout(function(){window.location.href= "https://chekin-app.web.app";},8000);
+              setTimeout(function(){window.location.href= "https://gatedenpasar.primakara.ac.id";},8000);
               
           }
           //window.requestAnimationFrame(loop);
@@ -112,7 +112,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Check In App - LLDIKTI VIII</title>
+    <title>Check In App</title>
   </head>
   <body>
     <audio id="scanqr" >
@@ -123,6 +123,7 @@
     </audio>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
